版本: 5250 作者: mars 日期: 2013/8/6 16:14 訊息: 1. channel list add turorial for empty channel list ---- 異動 : /index.html 異動 : /javascripts/v2/func.index.js 異動 : /lang/en.json 異動 : /lang/zh.json 新增 : /stylesheetsv3/com-9x9-cycle.css 新增 : /images/banner_ch_01.png 新增 : /images/banner_ch_02.png
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5250 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="stylesheets/style.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/channel.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/com-9x9-cycle.css?v=1278" />
 <title>9x9.tv - My Channels</title>
 </head>
 <body>
@@ -203,13 +204,31 @@
 
 <!-- channel-list-empty-tmpl Begin -->
 <script id="channel-list-empty-tmpl" type="text/x-jquery-tmpl">
-<li class="clearfix" id="empty-item" >
-    
-        <h2>{{html nn._([cms.global.PAGE_ID, 'episode-list', "You don't have any channel yet"])}}</h2>
-    
-</li>
+<div id="com-9x9-cycle-list">
+    <h3>{{html nn._([cms.global.PAGE_ID, 'channel-list', "You don't have any channels yet"])}}</h3>
+    <p class="btns"><span><a href="channel-add.html">${nn._([cms.global.PAGE_ID, 'channel-list', 'Create a new channel'])}</a></span></p>
+    <div id="com-9x9-cycle">
+        <p class="cycle-pager">
+            <a href="javascript:void(0);" class="active">。</a>
+            <a href="javascript:void(0);">。</a>
+        </p>
+        <div class="wrapper">
+            <ul class="content">
+                <li>
+                    <div class="img"><a href="epcurate-curation.html?cid=${id}"><img src="images/banner_ch_01.png" alt="" width="781" height="274" /></a></div>
+                    <div class="desc"><p><span>{{html nn._([cms.global.PAGE_ID, 'channel-list', 'Create your own <strong>personal and unique</strong> channel.'])}}</span></p></div>
+                </li>
+                <li>
+                    <div class="img"><a href="epcurate-curation.html?cid=${id}"><img src="images/banner_ch_02.png" alt="" width="781" height="274" /></a></div>
+                    <div class="desc"><p><span>{{html nn._([cms.global.PAGE_ID, 'channel-list', 'And online videos into episode and start to <strong>curate your own channel.</strong>'])}}</span></p></div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 </script>
 <!-- channel-list-empty-tmpl End -->
+
 
 <!-- channel-list-tmpl-item Begin -->
 <script id="channel-list-tmpl-item" type="text/x-jquery-tmpl">
@@ -298,6 +317,7 @@
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.ellipsis.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.blockUI.min.js?v=1278"></script>
+<script src="javascripts/libs/jquery.cycle.all.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.charcounter.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.tmpl.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.cookie.min.js?v=1278"></script>
