--- a/cms-settings.html
+++ b/cms-settings.html
@@ -5,10 +5,11 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/cms-settings.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/style.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/lightbox.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/uniform.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/cms-settings.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/perfect-scrollbar.css?v=1278" />
 <title>9x9.tv - CMS Settings</title>
 </head>
 <body>
@@ -287,6 +288,7 @@
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.ellipsis.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.blockUI.min.js?v=1278"></script>
+<script src="javascripts/libs/perfect-scrollbar.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.charcounter.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.uniform.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.tmpl.min.js?v=1278"></script>
@@ -294,9 +296,9 @@
 <script src="javascripts/libs/json2.min.js?v=1278"></script>
 <script src="javascripts/libs/purl.min.js?v=1278"></script>
 <script src="javascripts/v2/config.js?v=1278"></script>
-<script src="javascripts/v2/func.common.js?v=1278"></script>
-<script src="javascripts/v2/func.cms-settings.js?v=1278"></script>
-<script src="javascripts/v2/domready.common.js?v=1278"></script>
-<script src="javascripts/v2/domready.cms-settings.js?v=1278"></script>
+<script src="javascripts/v3/func.common.js?v=1278"></script>
+<script src="javascripts/v3/func.cms-settings.js?v=1278"></script>
+<script src="javascripts/v3/domready.common.js?v=1278"></script>
+<script src="javascripts/v3/domready.cms-settings.js?v=1278"></script>
 </body>
 </html>
