--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -586,6 +586,14 @@
                     <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'Send a scheduled notification to user to get more information.'])}</p>
                 </div>
             </li>
+            <li class="event-poll">
+                <div class="block">
+                    <div class="img poll">
+                        <h4>${nn._([cms.global.PAGE_ID, 'poi-event', 'Poll'])}</h4>
+                    </div>
+                    <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'Establish a multiple choice event, eg. a campaign, a poll, a survey, etc.'])}</p>
+                </div>
+            </li>
             <li class="event-instant">
                 <div class="block">
                     <div class="img instant">
@@ -788,6 +796,55 @@
                         <li class="btns"><span><a href="#" class="btn-save">${nn._([cms.global.PAGE_ID, 'poi-event', 'Save'])}</a></span></li>
                     </ul>
                 </div>
+            </div>
+        </form>
+    </div>
+    <div id="event-poll" class="event hide">
+        <form id="eventPollForm" name="eventPollForm" method="get" action="">
+            <input type="hidden" name="channelUrl" value="${link}" />
+            <input type="hidden" name="notifyMsg" value="" />
+            <input type="hidden" name="notifyScheduler" value="" />
+            <p class="crumb create"><a href="#" class="unblock">${nn._([cms.global.PAGE_ID, 'poi-event', 'Create POI'])}</a> &gt; <a href="#" class="crumb-event event-select">${nn._([cms.global.PAGE_ID, 'poi-event', 'Add interactive event'])}</a> &gt; ${nn._([cms.global.PAGE_ID, 'poi-event', 'Poll'])}</p>
+            <p class="crumb edit"><a href="#" class="unblock">${nn._([cms.global.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([cms.global.PAGE_ID, 'poi-event', 'Interactive event : Poll'])}</p>
+            <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Required field'])}</p>
+            <div class="video-wrap">
+                <div id="event-poll-video" class="video"></div>
+                <div class="poi-display"></div>
+                <div class="mask">
+                    <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
+                    <p class="no-video hide">${nn._([cms.global.PAGE_ID, 'poi-event', 'There is no valid video to preview.'])}</p>
+                </div>
+            </div>
+            <div class="event-input">
+                <div class="fminput">
+                    <label for="poll_display_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Display text'])}:</label>
+                    <p class="text"><span><input type="text" name="displayText" id="poll_display_text" value="${message}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input display text'])}" class="text poll-text" /></span></p>
+                </div>
+                <div class="fminput">
+                    <label for="poll_button_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Button text'])}:</label>
+                    {{each pollButtons}}
+                    <p class="text poll">
+                        <span>
+                            <input type="text" name="btnText1" maxlength="8" value="${$value}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+                        </span>
+                        <a href="#" class="poll-button-del"></a>
+                    </p>
+                    {{/each}}
+                    <div id="btn-add-poll-item" class="btn-gray">
+                        <p class="left"></p>
+                        <p class="center">
+                            <a href="#" class="langkey">Add Button</a>
+                        </p>
+                        <p class="right"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="func">
+                <ul>
+                    <li class="notice">${nn._([cms.global.PAGE_ID, 'poi-event', 'Please fill in all required fields.'])}</li>
+                    <li class="btns"><span><a href="#" class="btn-cancel">${nn._([cms.global.PAGE_ID, 'poi-event', 'Cancel'])}</a></span></li>
+                    <li class="btns"><span><a href="#" class="btn-save">${nn._([cms.global.PAGE_ID, 'poi-event', 'Save'])}</a></span></li>
+                </ul>
             </div>
         </form>
     </div>
@@ -1145,6 +1202,15 @@
 
 <script id="preload-image-tmpl-item" type="text/x-jquery-tmpl">
 <img src="${image}" alt="" />
+</script>
+
+<script id="poi-poll-button-tmpl-item" type="text/x-jquery-tmpl">
+    <p class="text poll">
+        <span>
+            <input type="text" name="${btnName}" maxlength="8" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+        </span>
+        <a href="#" class="poll-button-del"></a>
+    </p>
 </script>
 
 </body>
