版本: 5310 作者: mars 日期: 2013/8/13 17:31 訊息: 1. 更新使用正式 nn-sdk ---- 異動 : /epcurate-curation.html
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5310 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -17,7 +17,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1278"></script>
-<script src="javascripts/libs/nn-sdk.prototype.js?v=1278"></script>
+<script src="javascripts/libs/nn-sdk.js?v=1278"></script>
 <script src="javascripts/libs/respond.min.js"></script>
 <script src="javascripts/libs/jquery.mousewheel.min.js?v=1278"></script>
 <script src="javascripts/libs/jquery.ellipsis.min.js?v=1278"></script>
