--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -479,9 +479,16 @@
 <ol>
 {{each poiItem}}
     <li>
-        <p>${name}</p>
+        <div class="icon hyper">
+			<span><a href="#!pid=${targetId}&id=${id}" data-program-id="${targetId}" data-poi-point-id="${id}" class="edit">${name}</a></span>
+			<div class="tip-white">
+				<p class="left"></p>
+				<p class="center">Hyper Link</p>
+				<p class="right"></p>
+			</div>
+			<div class="tip-bottom"></div>
+		</div>
         <p class="func">
-            <a href="#!pid=${targetId}&id=${id}" data-program-id="${targetId}" data-poi-point-id="${id}" class="edit">Edit</a>
             <a href="#!pid=${targetId}&id=${id}" data-program-id="${targetId}" data-poi-point-id="${id}" class="btn-del">Delete</a>
         </p>
     </li>
@@ -800,8 +807,7 @@
         </form>
     </div>
     <div id="event-poll" class="event hide">
-        <form id="eventPollForm" name="eventPollForm" method="get" action="">
-            <input type="hidden" name="channelUrl" value="${link}" />
+        <form name="eventPollForm" id="eventPollForm" method="get" action="">
             <input type="hidden" name="notifyMsg" value="" />
             <input type="hidden" name="notifyScheduler" value="" />
             <p class="crumb create"><a href="#" class="unblock">${nn._([cms.global.PAGE_ID, 'poi-event', 'Create POI'])}</a> &gt; <a href="#" class="crumb-event event-select">${nn._([cms.global.PAGE_ID, 'poi-event', 'Add interactive event'])}</a> &gt; ${nn._([cms.global.PAGE_ID, 'poi-event', 'Poll'])}</p>
@@ -822,15 +828,31 @@
                 </div>
                 <div class="fminput">
                     <label for="poll_button_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Button text'])}:</label>
-                    {{each pollButtons}}
                     <p class="text poll">
                         <span>
-                            <input type="text" name="btnText1" maxlength="8" value="${$value}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+                            <input type="text" name="btnText" id="poll_button_text" maxlength="20" value="${button}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
                         </span>
-                        <a href="#" class="poll-button-del"></a>
+						<a class="poll-button-del" href="#"></a>
                     </p>
-                    {{/each}}
-                    <div id="btn-add-poll-item" class="btn-gray">
+                    <p class="text poll">
+                        <span>
+                            <input type="text" name="btnText" id="poll_button_text" maxlength="20" value="${button}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+                        </span>
+						<a class="poll-button-del" href="#"></a>
+                    </p>
+                    <p class="text poll">
+                        <span>
+                            <input type="text" name="btnText" id="poll_button_text" maxlength="20" value="${button}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+                        </span>
+						<a class="poll-button-del" href="#"></a>
+                    </p>
+                    <p class="text poll">
+                        <span>
+                            <input type="text" name="btnText" id="poll_button_text" maxlength="20" value="${button}" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
+                        </span>
+						<a class="poll-button-del" href="#"></a>
+                    </p>
+                    <div class="btn-gray">
                         <p class="left"></p>
                         <p class="center">
                             <a href="#" class="langkey">Add Button</a>
@@ -921,7 +943,7 @@
                             <h4><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'poi-event', 'Mobile notification message'])}</h4>
                             <p class="textarea"><span><span><textarea name="notifyMsg" id="instant_msg" cols="80" class="textarea" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input Mobile notification message'])}">${notifyMsg}</textarea></span></span></p>
                             <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'Recommend: less 34 bytes'])}</p>
-                            <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'If users press OK or Enter, the mobile notification will be send immediately.'])}</p>
+                            <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'The mobile notification will instant send, when user pressed OK or Enter.'])}</p>
                         </div>
                     </div>
                 </div>
@@ -960,6 +982,7 @@
                             {{else}}
                                 <span class="color{{if cms.config.COLOR_MAP[color]}} ${cms.config.COLOR_MAP[color]}{{/if}}"></span>
                             {{/if}}
+							<span class="bg"></span>
                             <ul class="color-list">
                                 <li class="c-fff" data-meta="#ffffff">#ffffff</li>
                                 <li class="c-eee" data-meta="#eeeeee">#eeeeee</li>
@@ -1040,6 +1063,7 @@
                 {{else}}
                     <span{{if cms.config.COLOR_MAP[bgColor]}} class="${cms.config.COLOR_MAP[bgColor]}"{{/if}}></span>
                 {{/if}}
+				<span class="bg"></span>
                 <ul class="color-list">
                     <li class="c-fff" data-meta="#ffffff">#ffffff</li>
                     <li class="c-eee" data-meta="#eeeeee">#eeeeee</li>
@@ -1128,15 +1152,15 @@
     <p class="episode-storyboard">
         ${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Episode storyboard'])} (<em id="storyboard-length">50</em> ${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'videos left'])})<span>${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Duration'])} <em id="storyboard-duration">00:00:00</em></span>
     </p>
-    <div class="channel-name"><p class="title">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Channel:'])}</p><p id="channel-name" data-meta="${chName}">${chName}</p></div>
-    <div class="episode-name"><p class="title">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Episode:'])}</p><p id="episode-name" data-meta="${epName}">${epName}</p></div>
+    <div class="channel-name"><span class="title">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Channel:'])}</span><span id="channel-name" data-meta="${chName}">${chName}</span></div>
+    <div class="episode-name"><span class="title">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Episode:'])}</span><span id="episode-name" data-meta="${epName}">${epName}</span></div>
 </div>
 </script>
 
 <!-- storyboard-listing-tmpl-item Begin -->
 <script id="storyboard-listing-tmpl-item" type="text/x-jquery-tmpl">
-<li data-ytid="${ytId}" data-ytduration="${ytDuration}" data-starttime="${startTime}" data-endtime="${endTime}"{{if ytDuration === 0 || isRequesterRegionRestricted}} class="invalid"{{/if}}>
-    {{if (isZoneLimited || isSyndicateLimited) && !isRequesterRegionRestricted}}
+<li data-ytid="${ytId}" data-ytduration="${ytDuration}" data-starttime="${startTime}" data-endtime="${endTime}"{{if ytDuration == 0}} class="invalid"{{/if}}>
+    {{if isZoneLimited || isSyndicateLimited}}
         {{if isZoneLimited && isSyndicateLimited}}
             <a href="#!pid=${id}&ytid=${ytId}" class="warning2"><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Not playable in some regions & on mobile device'])}</span></span></span></span></a>
         {{else}}
@@ -1148,32 +1172,32 @@
             {{/if}}
         {{/if}}
     {{else}}
-        {{if isInvalid || isUnplayableVideo || isEmbedLimited || isPrivateVideo || isRequesterRegionRestricted}}
+        {{if isInvalid || isUnplayableVideo || isEmbedLimited || isPrivateVideo}}
             <a href="#!pid=${id}&ytid=${ytId}" class="error"></a>
         {{/if}}
     {{/if}}
     <p class="order"><!-- dynamic rebuild video number after template render --></p>
     <p class="img">
-        {{if ytDuration > 0 && !isRequesterRegionRestricted}}
+        {{if ytDuration > 0}}
             <img src="${imageUrl}" alt="" width="80" height="45" />
         {{else}}
             <img src="images/ep_invalid.png" alt="" width="80" height="45" />
         {{/if}}
-        {{if ytDuration > 0 && !isRequesterRegionRestricted}}
+        {{if ytDuration > 0}}
             <span class="time"><span class="time-right"><span class="time-middle">${cms.common.formatDuration(duration)}</span></span></span>
         {{/if}}
     </p>
-    {{if ytDuration > 0 && !isRequesterRegionRestricted}}
+    {{if ytDuration > 0}}
         <h4 class="ellipsis multiline">${name}</h4>
     {{else}}
         {{if isEmbedLimited}}
-            <h4>[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Non-embeddable video'])}]</h4>
+            <h4 class="ellipsis multiline">[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Non-embeddable video'])}]</h4>
         {{else isPrivateVideo}}
-            <h4>[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Private video'])}]</h4>
+            <h4 class="ellipsis multiline">[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Private video'])}]</h4>
         {{else isInvalid}}
-            <h4>[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Invalid video'])}]</h4>
-        {{else isUnplayableVideo || isRequesterRegionRestricted}}
-            <h4>[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Unplayable video'])}]</h4>
+            <h4 class="ellipsis multiline">[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Invalid video'])}]</h4>
+        {{else isUnplayableVideo}}
+            <h4 class="ellipsis multiline">[${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Unplayable video'])}]</h4>
         {{/if}}
     {{/if}}
     <p class="title">
@@ -1186,13 +1210,13 @@
     </p>
     <p class="hover-func">
         <a href="#!pid=${id}&ytid=${ytId}" class="video-del">Video Del</a>
-        {{if ytDuration > 0 && !isRequesterRegionRestricted}}
+        {{if ytDuration > 0}}
             <a href="#!pid=${id}&ytid=${ytId}" class="video-play">Video Play</a>
         {{/if}}
-        {{if ytDuration > 0 && !isRequesterRegionRestricted && beginTitleCard == null}}
+        {{if ytDuration > 0 && beginTitleCard == null}}
             <a href="#!pid=${id}&ytid=${ytId}" class="begin-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Add Title'])}</span></span></span></span></a>
         {{/if}}
-        {{if ytDuration > 0 && !isRequesterRegionRestricted && endTitleCard == null}}
+        {{if ytDuration > 0 && endTitleCard == null}}
             <a href="#!pid=${id}&ytid=${ytId}" class="end-title">Edit<span class="tip"><span class="tip-left"><span class="tip-right"><span class="tip-middle">${nn._([cms.global.PAGE_ID, 'episode-storyboard', 'Add Title'])}</span></span></span></span></a>
         {{/if}}
     </p>
@@ -1202,15 +1226,6 @@
 
 <script id="preload-image-tmpl-item" type="text/x-jquery-tmpl">
 <img src="${image}" alt="" />
-</script>
-
-<script id="poi-poll-button-tmpl-item" type="text/x-jquery-tmpl">
-    <p class="text poll">
-        <span>
-            <input type="text" name="${btnName}" maxlength="8" placeholder="${nn._([cms.global.PAGE_ID, 'poi-event', 'Input button text'])}" class="text poll-button" />
-        </span>
-        <a href="#" class="poll-button-del"></a>
-    </p>
 </script>
 
 </body>
