版本: 5361 作者: mars 日期: 2013/8/19 15:59 訊息: 1. fix get-url locateion top to right ---- 異動 : /episode-list.html 異動 : /images/bg_tip_left.png
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5361 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/episode-list.html
+++ b/episode-list.html
@@ -7,7 +7,7 @@
 <meta http-equiv="expires" content="0" />
 <link rel="stylesheet" href="stylesheetsv3/perfect-scrollbar.css" />
 <link rel="stylesheet" href="stylesheetsv3/style.css?v=1278" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
+<link rel="stylesheet" href="stylesheetsv3/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheetsv3/episode.css?v=1278" />
 <title>9x9.tv - Episode list</title>
 </head>
@@ -215,7 +215,7 @@
     </div>
     <div class="right"></div>
 </div>
-<div class="tip-bottom"></div>
+<div class="tip-arrow-left"></div>
 </script>
 <!-- get-url-tmpl End -->
 
@@ -340,7 +340,7 @@
                 </div>
                 <div class="right"></div>
             </div>
-            <div class="tip-bottom"></div>
+            <div class="tip-arrow-left"></div>
         </div>
         <div class="number">${seq}</div>
         <div class="episode">
