版本: 5376 作者: mars 日期: 2013/8/22 10:34 訊息: 1. channel-poi.html move to v3 2. episode scrollerbar fix ---- 異動 : /channnel-poi.html 異動 : /javascripts/v3/func.channel-poi.js 異動 : /javascripts/v3/func.episode.js 異動 : /javascripts/v3/domready.episode.js 異動 : /stylesheetsv3/style.css 異動 : /stylesheetsv3/channnel-poi.css
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5376 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/channel-poi.html
+++ b/channel-poi.html
@@ -226,9 +226,17 @@
 <ol>
 {{each poiItem}}
     <li>
-        <p class="poi-title">${name}</p>
+		<div id="poi_point_${id}" class="icon null-icon">
+			<span><a href="#!cid=${targetId}&id=${id}" data-channel-id="${targetId}" data-poi-point-id="${id}" class="edit">${name}</a></span>
+			<div class="tip-white">
+				<p class="left"></p>
+				<p class="center">Event Type</p>
+				<p class="right"></p>
+			</div>
+			<div class="tip-bottom"></div>
+		</div>
         <p class="func">
-            <a href="#!cid=${targetId}&id=${id}" data-channel-id="${targetId}" data-poi-point-id="${id}" class="edit">Edit</a>
+            
             <a href="#!cid=${targetId}&id=${id}" data-channel-id="${targetId}" data-poi-point-id="${id}" class="btn-del">Delete</a>
         </p>
     </li>
