版本: 5378 作者: mars 日期: 2013/8/22 16:02 訊息: 1. https://docs.google.com/spreadsheet/ccc?key=0AjDDP--2Cg6AdHJKYkRkUW56cVBYS25kZ1l4Q0RFdWc#gid=2 Episode / Channel POI list    Remove 鉛筆圖 "Edit" 按鈕，改成點擊 POI title 可以 Edit POI，mouse over POI title 會 highlight POI title。 ---- 異動 : /epcurate-curation.html 異動 : /javascripts/v3/func.curation.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5378 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -479,11 +479,11 @@
 <ol>
 {{each poiItem}}
     <li>
-        <div class="icon hyper">
+        <div class="icon null-icon" id="poi_point_${id}">
 			<span><a href="#!pid=${targetId}&id=${id}" data-program-id="${targetId}" data-poi-point-id="${id}" class="edit">${name}</a></span>
 			<div class="tip-white">
 				<p class="left"></p>
-				<p class="center">Hyper Link</p>
+				<p class="center">Event Type</p>
 				<p class="right"></p>
 			</div>
 			<div class="tip-bottom"></div>
