--- a/index.html
+++ b/index.html
@@ -70,6 +70,66 @@
             <div class="constrain">
                 <ul id="channel-list">
                     <!-- template = #channel-list-tmpl-item -->
+
+<li data-meta="19405" class="clearfix" style="position: absolute;top: -300px;">
+    <div class="container">
+        <div class="container-right">
+            <div class="container-bottom">
+                <div class="container-left">
+                    <div class="wrap">
+                        <div class="photo-list">
+                            <div class="ep">
+                                <a target="_blank" href="#">
+                                    <img src="images/ep_default.png"></a>
+                            </div>
+                            <div class="ch">
+                                <div class="img">
+                                    <a target="_blank" href="#">
+                                        <img src="images/ch_default.png"></a>
+                                </div>
+                            </div>
+                            <a target="_blank" href="#">
+                                <img class="watermark" alt="" src="images/icon_playlist.png"></a>
+                        </div>
+                        <div class="info"></div>
+                        <div class="func-wrap">
+                            <div class="func-btns">
+                                <div class="btn-wrap enable">
+                                    <ul>
+                                        <li>
+                                            <a class="add" href="#"></a>
+                                        </li>
+                                        <li>
+                                            <a class="channel-poi" href="#"></a>
+                                        </li>
+                                        <li>
+                                            <a class="detail" href="#"></a>
+                                        </li>
+                                        <li>
+                                            <a class="setting" href="#"></a>
+                                        </li>
+                                        <li>
+                                            <a class="del" rel="19405" href="#"></a>
+                                        </li>
+                                        <li>
+                                            <a class="url disable" href="#"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="drag">
+                        <span>move</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</li>
+
+
+
                 </ul>
             </div>
         </div>
