版本: 5430 作者: mars 日期: 2013/9/2 17:23 訊息: 1. PCS add requirement by Lisa , play url on channel add mso name ---- 異動 : /store-manage.html 異動 : /portal-manage.html 異動 : /javascripts/v3/func.portal.manage.js 異動 : /javascripts/v3/func.portal.store.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5430 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -228,7 +228,7 @@
 <li id="sch_${id}">
     <div class="thumb">
         <div id="schk_${id}" class="checkbox{{if alreadyAdd === true}} hide{{/if}}"></div>
-        <a href="/view?ch=${id}" target="_blank">
+        <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
             <img src="images/icon_playlist.png" alt="" class="watermark" />
         </a>
         <div class="ch">
@@ -327,7 +327,7 @@
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="/view?ch=${id}" target="_blank">
+            <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
@@ -359,7 +359,7 @@
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="/view?ch=${id}" target="_blank">
+            <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
