--- a/store-manage.html
+++ b/store-manage.html
@@ -185,7 +185,7 @@
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="/view?ch=${id}" target="_blank">
+            <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
@@ -208,7 +208,7 @@
                 </div>
                 <div class="tip-top"></div>
             </div>
-            <a href="/view?ch=${id}" target="_blank">
+            <a href="/view?mso=${msoName}&ch=${id}" target="_blank">
                 <img class="watermark" alt="" src="images/icon_playlist.png" />
             </a>
             <div class="ch">
