--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -483,7 +483,7 @@
 			<span><a href="#!pid=${targetId}&id=${id}" data-program-id="${targetId}" data-poi-point-id="${id}" class="edit">${name}</a></span>
 			<div class="tip-white">
 				<p class="left"></p>
-				<p class="center">Event Type</p>
+				<p class="center">${eventTypeName}</p>
 				<p class="right"></p>
 			</div>
 			<div class="tip-bottom"></div>
