版本: 5466 作者: yifan 日期: 2013/9/10 17:02 訊息: 1. bug fix : Episode level list 顯示 POI icon異常
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5466 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -479,7 +479,17 @@
 <ol>
 {{each poiItem}}
     <li>
+        {{if eventType === 1}}
+        <div class="icon hyper" id="poi_point_${id}">
+        {{else eventType === 2}}
+        <div class="icon schedule" id="poi_point_${id}">
+        {{else eventType === 3}}
+        <div class="icon poll" id="poi_point_${id}">
+        {{else eventType === 4}}
+        <div class="icon instant" id="poi_point_${id}">
+        {{else}}
         <div class="icon null-icon" id="poi_point_${id}">
+        {{/if}}
 			<span><a href="#!pid=${targetId}&id=${id}" data-program-id="${targetId}" data-poi-point-id="${id}" class="edit">${name}</a></span>
 			<div class="tip-white">
 				<p class="left"></p>
