--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -479,6 +479,7 @@
 <ol>
 {{each poiItem}}
     <li>
+    {{if !!eventType}}
         {{if eventType === 1}}
         <div class="icon hyper" id="poi_point_${id}">
         {{else eventType === 2}}
@@ -490,10 +491,17 @@
         {{else}}
         <div class="icon null-icon" id="poi_point_${id}">
         {{/if}}
+    {{else}}
+        <div class="icon null-icon" id="poi_point_${id}">
+    {{/if}}
 			<span><a href="#!pid=${targetId}&id=${id}" data-program-id="${targetId}" data-poi-point-id="${id}" class="edit">${name}</a></span>
 			<div class="tip-white">
 				<p class="left"></p>
-				<p class="center">${eventTypeName}</p>
+                {{if !!eventTypeName}}
+				<p class="center">${nn._([cms.global.PAGE_ID, 'poi-event', eventTypeName])}</p>
+                {{else}}
+                <p class="center">Event Type</p>
+                {{/if}}
 				<p class="right"></p>
 			</div>
 			<div class="tip-bottom"></div>
