PCS 4.1 system category manage function success
todo :  language translate

--- a/store-manage.html
+++ b/store-manage.html
@@ -38,7 +38,7 @@
     <div class="studio-nav-wrap">
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
-            <li><span><a href="index.html">My Programs</a></span></li>
+            <li><span><a href="index.html">My Channels</a></span></li>
             <li class="on"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
@@ -60,7 +60,7 @@
             <ul>
                 <li><a href="portal-manage.html" class="portal langkey">My Portal</a></li>
                 <li>
-                	<a href="store-manage.html" class="store langkey">Program Store</a>
+                	<a href="store-manage.html" class="store langkey">Channel Store</a>
                 	<ul class="sub-nav">
                 		<li><a href="#">Promotion Category</a></li>
                         <li class="active"><a href="#">System Category</a></li>
@@ -74,7 +74,7 @@
     <div id="main-wrap-slider" class="slider-wrap"><div class="slider-vertical"></div></div>
     <div id="content-main">
         <div id="title-func" class="clearfix">
-            <h2><span class="langkey">Program Store</span> &gt; <span class="categry-type langkey">System Category</span></h2>
+            <h2><span class="langkey">Channel Store</span> &gt; <span class="categry-type langkey">System Category</span></h2>
             <ul>
                 <li id="set-save" class="last"><p class="btns disable"><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
             </ul>
@@ -291,7 +291,7 @@
                 <div class="icon-holder"></div>
                 <div class="tip-white">
                     <p class="left"></p>
-                    <p id="" class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Add program'])}</p>
+                    <p id="" class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Add channel'])}</p>
                     <p class="right"></p>
                 </div>
                 <div class="tip-top"></div>
@@ -332,7 +332,7 @@
                 <div class="icon-holder"></div>
                 <div class="tip-white">
                     <p class="left"></p>
-                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove program'])}</p>
+                    <p class="center">${nn._([cms.global.PAGE_ID, 'channel-list', 'Remove channel'])}</p>
                     <p class="right"></p>
                 </div>
                 <div class="tip-top"></div>
